--- a/server/package.json
+++ b/server/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "type": "module",
   "dependencies": {
+    "@web3-storage/w3up-client": "^12.5.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "gridfs-stream": "^1.1.1",
     "helmet": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
