--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "ethers": "^5.7.2",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "gridfs-stream": "^1.1.1",
